# NeuroSyM-prediction

./: README.md
NeuRoSyM-darnn/scripts/: CMakeLists.txt  README.md  neurosymREADME.txt  setup.py
NeuRoSyM-darnn/scripts/conf/: JackRabbot_x1_longterm.json  JackRabbot_y1_longterm.json
NeuRoSyM-darnn/scripts/scripts_longterm/: neurosym_model.py  neurosym_train.py  peds_pre_caf_new1.sh  peds_pre_caf_new2.sh
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-alphacndref-TemporalNO-R3p7-80ts/JackRabbot_x13_longterm/: events.out.tfevents.1674666076.LCH02  events.out.tfevents.1674725515.LCH02
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-alphacndref3p7-TemporalYES-80ts/: test_cafe_alphacndref_Nin1out_80ts_3p7_v15c.out
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-alphacndref3p7-TemporalYES-80ts/JackRabbot_x15c_longterm/: events.out.tfevents.1674639866.LCH04
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-alphacndrefined-TemporalYES-R3p7-48ts/: test_cafe_alphacndref2_Nin1out_48ts_R3p7_v10c2.out
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-noalphaupdate-TemporalYES-R3p7-48ts/: test_cafe_noalphaupdate_Nin1out_48ts_R3p7_v10c2.out
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-noalphaupdate-TemporalYES-R3p7-80ts/JackRabbot_x11_longterm/: events.out.tfevents.1674471956.LCH03
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-noinpatt-TemporalYES-R3p7-48ts/: test_cafe_noinpatt_Nin1out_48ts_R3p7_v10c.out
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-noinpatt-TemporalYES-R3p7-48ts/JackRabbot_x13_longterm/: events.out.tfevents.1674640137.LCH02  events.out.tfevents.1674665032.LCH02
NeuRoSyM-darnn/scripts/scripts_longterm/IJCNN-logs/log-cafe-new-Nin1out-noinpatt-TemporalYES-R3p7-80ts/JackRabbot_x11_longterm/: events.out.tfevents.1674505608.LCH03  events.out.tfevents.1674550636.LCH03
NeuRoSyM-sgan/: CMakeLists.txt  Readme.md
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_12ts_eth/: test_cnd_eth_12ts
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_12ts_univ/: test_cnd_univ_12ts
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_12ts_zara1/: test_sgan_alpha_cnd_t_isnext_tobs.out
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_12ts_zara2/: test_sgan_alpha_cnd_t_isnext_tobs_12ts.out
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_8ts_zara2/: test_sgan_alpha_cnd_zara2_8ts.out
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/noalpha_univ_8ts/: test_noalpha_univ_8ts
NeuRoSyM-sgan/scripts/models/neurosym-sgan-models/noalpha_zara2_8ts/: test_noalpha_8ts_zara2.txt
NeuRoSyM-sgan/scripts/sgan/: models.py  models_informed.py
NeuRoSyM-sgan/scripts/sgan/data/: qtc.py  qtcc1_labels.txt  trajectories.py
NeuroSyM-darnn/: README.md
NeuroSyM-darnn/data_processing/: CMakeLists.txt  package.xml
NeuroSyM-darnn/data_processing/include/: operations.h  read_json.h
NeuroSyM-darnn/data_processing/lib/: operations.cpp  read_json.cpp
NeuroSyM-darnn/qtc_2d/: CMakeLists.txt  package.xml
NeuroSyM-darnn/qtc_2d/include/: objects.h  qtc_indexed_c1.h
NeuroSyM-darnn/qtc_2d/lib/: cnd_labels.txt  objects.cpp  qtc_indexed_c1.cpp  qtc_informed_c1  qtc_informed_c1.cpp  qtcc1_labels.txt
NeuroSyM-darnn/qtc_2d/src/: time_series.cpp
NeuroSyM-darnn/scripts/: README.md  package.xml
NeuroSyM-darnn/scripts/conf/: JackRabbot_x2_longterm.json  JackRabbot_y2_longterm.json
NeuroSyM-darnn/scripts/scripts_longterm/: CMakeLists.txt  config_allin1out.py  data_loader_allin1out.py  qtc.py
NeuroSyM-sgan/: Readme.md  setup.py
NeuroSyM-sgan/scripts/: evaluate_model.py  evaluate_model_informed.py  evaluate_model_informed_causal.py  plot_motion.py  plot_motion_full.py  train.py  train_informed.py  train_informed2.py  train_informed2_causal_v1_opt.py
NeuroSyM-sgan/scripts/models/neurosym-sgan-models/alpha_cnd_8ts_eth/: test_cnd_8ts_eth
NeuroSyM-sgan/scripts/sgan/: losses_informed_causal.py  models_informed2_causal_v1_opt.py  models_informed2_tm1.py
NeuroSyM-sgan/scripts/sgan/data/: loader.py  loader_informed.py  loader_informed2.py  loader_informed2_causal_v1_opt.py  trajectories_informed.py  trajectories_informed2.py  trajectories_informed2_causal_v1_opt.py  trajectories_informed2_tm1.py
(+20 files in other folders)
